card spacing is fixed.

--- a/front-end/project-front-end/css/style.scss
+++ b/front-end/project-front-end/css/style.scss
@@ -169,13 +169,13 @@ body {
 
 .notes-container {
   display: flex;
-  flex-wrap: wrap-reverse;
+  flex-wrap: wrap;
   padding-top: 40px;
   background-color: #F1E4F3;
   width: 1500px; }
 
 .new-notes-container {
-  justify-content: center;
+  justify-content: space-around;
   padding-top: 5px;
   background-color: #F1E4F3;
   width: 1500px; }
@@ -187,11 +187,12 @@ body {
   margin: 5px 5px 5px 5px;
   height: 200px;
   width: 410px;
-  justify-content: space-around;
+  padding-left: 50px;
+  justify-content: space-between;
   overflow-y: scroll;
   border: solid #5BBA6F;
   border-radius: 15px 50px;
-  justify-content: center;
+  justify-content: space-between;
   text-align: center;
   background-color: white; }
 
@@ -199,7 +200,15 @@ body {
   text-align: center; }
 
 .input {
-  font-size: 10px; }
+  font-size: 10px;
+  height: 100px;
+  width: 200px;
+  overflow: auto; }
+
+.title-input {
+  font-size: 20px;
+  height: 20px;
+  width: 100px; }
 
 .notes-p-tag {
   display: flex;
